# protobuf_offsets_generator

./: .gitignore  CMakeLists.txt  README.md  build.rs  dumper.py  launch.py  main.cpp  protobufs.json  protobufs.pb.cc  protobufs.pb.h  protobufs.proto
